--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ header {
           transition: scale 0.5s; }
         header nav ul li a:hover {
           color: whitesmoke;
-          transform: scale(1.1); }
+          transform: scale(1.05); }
       header nav ul ul {
         margin: 0;
         padding: 0;
@@ -56,7 +56,7 @@ header {
         display: none;
         background-color: #060606;
         position: absolute;
-        top: 40px;
+        top: 35px;
         left: 0; }
         header nav ul ul li {
           font-size: 0.75em;
@@ -267,7 +267,10 @@ footer {
       position: absolute;
       bottom: 5px;
       right: 5px;
-      font-size: 1.2em; }
+      font-size: 1.075em; }
+      header nav ul li {
+        padding-left: 10px;
+        padding-right: 10px; }
       header nav ul li:hover ul {
         display: block; }
   main h1 {
