--- a/css/main.css
+++ b/css/main.css
@@ -242,12 +242,16 @@ footer {
     flex-flow: row nowrap;
     justify-content: center; }
     footer ul li {
-      color: lightskyblue;
+      font-family: serif;
       list-style: none;
       padding: 0 15px; }
       footer ul li a {
         color: lightskyblue;
-        text-decoration: none; }
+        text-decoration: none;
+        transition: scale 0.5s; }
+      footer ul li a:hover {
+        color: whitesmoke;
+        transform: scale(1.05); }
 
 @media only screen and (min-width: 767px) {
   body {
@@ -284,6 +288,9 @@ footer {
     font-size: 1.7em; }
   .elemento-actualizacion .h6 {
     font-size: 1.5em; }
+  .elemento-actualizacion div {
+    width: 75%;
+    margin: auto; }
   #silksong div {
     width: 75%;
     margin-bottom: 25px; }
@@ -297,6 +304,21 @@ footer {
 @media only screen and (min-width: 1200px) {
   main h1 {
     font-size: 4em; }
+  .elemento-actualizacion #godmaster-sample {
+    width: 50vw;
+    margin: auto; }
+  .elemento-actualizacion #lifeblood-sample {
+    width: 50vw;
+    margin: auto; }
+  .elemento-actualizacion #grimm-troupe-sample {
+    width: 50vw;
+    margin: auto; }
+  .elemento-actualizacion #hidden-dreams-sample {
+    width: 50vw;
+    margin: auto; }
+  #carousel {
+    width: 70%;
+    margin: auto; }
   .tc-crew {
     width: 75%; }
   #tc-crew-reverse {
