--- a/scss/_mqueries.scss
+++ b/scss/_mqueries.scss
@@ -120,5 +120,9 @@
         img {
             width: 600px;
         }
-    }    
+    }
+    footer {
+        font-size: 1.5em;
+        padding-bottom: 30px;
+    }
 }
