--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,6 +12,7 @@ footer {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
+        align-items: center;
 
         li {
             font-family: serif;
