Mejorada optimización responsive en "Personajes" y "Amuletos", arreglado efecto hover en íconos de footer

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -26,7 +26,7 @@ footer {
                 transition: scale 0.5s;
             }
 
-            a:hover {
+            a i:hover {
                 color: $color-white;
                 transform: scale(1.05);
             }
