--- a/css/main.css
+++ b/css/main.css
@@ -143,55 +143,57 @@ main {
 #submit-btn {
   border: grove 2px #313131; }
 
-#tabla {
+.tabla {
   width: 90%;
   margin: 50px auto;
   border: groove 2px #313131;
   display: flex;
   flex-flow: column nowrap; }
-  #tabla .grid-row-head {
+  .tabla .grid-row-head {
     width: 100%;
     font-size: 1.2em;
-    display: flex;
+    display: none;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: center; }
-    #tabla .grid-row-head p {
+    .tabla .grid-row-head p {
       margin: 10px 0;
       font-family: "Cinzel", serif;
       color: grey; }
-    #tabla .grid-row-head div {
+    .tabla .grid-row-head div {
       border: groove 3px #313131;
       height: 100%; }
-  #tabla .grid-row {
+  .tabla .grid-row {
     width: 100%;
-    height: 200px;
+    border: groove 2px #313131;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center; }
+    .tabla .grid-row div {
+      height: 100%; }
+  .tabla .grid-row-charm {
+    width: 100%;
+    border: groove 3px #313131;
+    padding-top: 10px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: center; }
-    #tabla .grid-row div {
-      border: groove 3px #313131;
-      height: 100%; }
-  #tabla .grid-row-charm {
-    width: 100%;
-    height: 130px;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center; }
-    #tabla .grid-row-charm div {
-      border: groove 3px #313131;
-      height: 100%; }
-    #tabla .grid-row-charm .columna-nombre p {
-      margin: 5px 0 10px 0;
-      font-family: "Open Sans", sans-serif;
-      color: lightskyblue;
-      text-align: center; }
+    .tabla .grid-row-charm .columna-nombre {
+      width: 40%; }
+      .tabla .grid-row-charm .columna-nombre p {
+        margin: 10px 0 10px 0;
+        font-family: "Open Sans", sans-serif;
+        color: lightskyblue;
+        text-align: center; }
+    .tabla .grid-row-charm .columna-descrip {
+      width: 60%;
+      min-height: 100%; }
 
 .columna-nombre {
   margin: 0;
-  width: 20%;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -203,7 +205,7 @@ main {
 
 .columna-descrip {
   margin: 0;
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -250,7 +252,7 @@ footer {
         color: lightskyblue;
         text-decoration: none;
         transition: scale 0.5s; }
-      footer ul li a:hover {
+      footer ul li a i:hover {
         color: whitesmoke;
         transform: scale(1.05); }
 
@@ -300,7 +302,29 @@ footer {
     margin: auto; }
   form {
     width: 80%;
-    margin: auto; } }
+    margin: auto; }
+  .tabla .grid-row-head {
+    display: flex; }
+  .tabla .grid-row {
+    height: 250px;
+    border: none;
+    flex-flow: row nowrap; }
+  .tabla .columna-nombre {
+    width: 30%;
+    border: groove 3px #313131; }
+  .tabla .columna-descrip {
+    width: 70%;
+    border: groove 3px #313131; }
+  .tabla .grid-row-charm {
+    height: 150px;
+    padding: 0;
+    border: none; }
+    .tabla .grid-row-charm .columna-nombre {
+      width: 30%;
+      height: 100%; }
+    .tabla .grid-row-charm .columna-descrip {
+      width: 70%;
+      height: 100%; } }
 
 @media only screen and (min-width: 1200px) {
   main h1 {
@@ -317,6 +341,8 @@ footer {
   .elemento-actualizacion #hidden-dreams-sample {
     width: 50vw;
     margin: auto; }
+  .tabla {
+    width: 70vw; }
   .tc-crew {
     width: 75%; }
   #tc-crew-reverse {
